k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowledgeops-backend
  namespace: knowledgeops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: knowledgeops-backend

  template:
    metadata:
      labels:
        app: knowledgeops-backend

    spec:
      containers:

      - name: backend

        image: 747848915242.dkr.ecr.us-east-1.amazonaws.com/knowledgeops-backend:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"

          limits:
            cpu: "1000m"
            memory: "2Gi"
